# noscam2

./: .env  .gitattributes  .replit  README.md  deepfake_model_v2.keras  detector.py  index.html  label_encoder_v2.pkl  main.py  model.h5  pyproject.toml  requirements.txt  scaler_v2.pkl  subscription.html
